[package]
name = "llma-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clearscreen = "2.0.1"
dialoguer = "0.11.0"
fancy = "0.3.1"
reqwest = { version = "0.11.24", features = ["json","gzip","deflate"] }
serde = "1.0.197"
serde_derive = "1.0.197"
serde_json = "1.0.114"
spinners = "4.1.1"
tokio = { version = "1", features = ["full"] }
